WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210732
Content disappears on CSS parallax example
https://bugs.webkit.org/show_bug.cgi?id=210732
Summary
Content disappears on CSS parallax example
Simon Fraser (smfr)
Reported
2020-04-19 22:09:58 PDT
Content disappears on CSS parallax example
Attachments
Patch
(9.30 KB, patch)
2020-04-19 22:14 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
Patch
(27.42 KB, patch)
2020-04-19 22:28 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(15.29 KB, patch)
2020-04-19 23:11 PDT
,
Simon Fraser (smfr)
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-04-19 22:14:13 PDT
Created
attachment 396942
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-04-19 22:14:15 PDT
<
rdar://problem/61997636
>
Simon Fraser (smfr)
Comment 3
2020-04-19 22:28:28 PDT
Created
attachment 396943
[details]
Patch
Darin Adler
Comment 4
2020-04-19 22:49:46 PDT
That new patch is a two-for-one!
Simon Fraser (smfr)
Comment 5
2020-04-19 23:10:37 PDT
Oh whoops. I wish webkit-patch supported --git-index like prepare-Changelogs does.
Simon Fraser (smfr)
Comment 6
2020-04-19 23:11:04 PDT
Created
attachment 396945
[details]
Patch
EWS
Comment 7
2020-04-20 09:27:39 PDT
Found 2 new test failures: compositing/tiling/coverage-adjustment-secondary-quad-mapping.html, fast/layoutformattingcontext/simple-absolute-positioned-replaced-inline-element-with-percentage-height.html
Simon Fraser (smfr)
Comment 8
2020-04-20 10:15:31 PDT
https://trac.webkit.org/changeset/260371/webkit
Darin Adler
Comment 9
2020-04-20 10:31:48 PDT
Comment on
attachment 396942
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=396942&action=review
> Source/WebCore/platform/graphics/transforms/TransformState.cpp:223 > + if (direction == ApplyTransformDirection) { > quad = m_accumulatedTransform->mapQuad(quad); > + return; > + } > > quad = m_accumulatedTransform->inverse().valueOr(TransformationMatrix()).projectQuad(quad, wasClamped);
I should have suggested else instead of return.
Simon Fraser (smfr)
Comment 10
2020-04-20 11:46:24 PDT
I used return to mirror the mapPoint() code above.
Darin Adler
Comment 11
2020-04-20 12:03:23 PDT
(In reply to Simon Fraser (smfr) from
comment #10
)
> I used return to mirror the mapPoint() code above.
I suggested else to mirror translateTransform above. We just happened to look at different functions.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug